2016-09-02  Carlos Garcia Campos  <cgarcia@igalia.com>

        [Threaded Compositor] Move the viewport controller off the compositing thread
        https://bugs.webkit.org/show_bug.cgi?id=161532

        Reviewed by Michael Catanzaro.

        While working on bug #161242 I've realized that having the view port controller in the compositing thread makes
        everything more complex. The viewport controller receives changes about things like contents size, viewport
        size, etc. and uses that information to compute the visible contents rect and page scale factor. Then it
        notifies back to main thread about the computed visible contents rect and page scale. Those computations are not
        heave at all, so they could be done in the main thread and we would avoid communications between the main and
        compositing thread in both directions. The main thread needs the visible contents rect to notify the compositing
        coordinator and the page cale to scale the page in case of pixed layout. But the compositing thread only needs
        to know the effective scale and scroll position. So, instead of going to the compositing thread after every
        change that might update the visible contents rect and page scale factor, we could do those calculations in the
        main thread and only notify the compositing thread about the actual changes in the scroll position and effective scale.

        * Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
        (WebKit::CoordinatedGraphicsScene::createTilesIfNeeded): Return early if backingStore is nullptr, which can
        happen if the layer shouldn't have a backing store and was removed by the previous call to prepareContentBackingStore().
        (WebKit::CoordinatedGraphicsScene::updateTilesIfNeeded): Ditto.
        * Shared/CoordinatedGraphics/SimpleViewportController.cpp:
        (WebKit::SimpleViewportController::SimpleViewportController): Remove the client since we no longer need to