@@ -1,3 +1,12 @@
+2016-09-02  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [GTK] -Wmissing-field-initializers on WaylandCompositor.cpp:295
+        https://bugs.webkit.org/show_bug.cgi?id=161524
+
+        Reviewed by Carlos Garcia Campos.
+
+        * UIProcess/gtk/WaylandCompositor.cpp:
+
 2016-09-02  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [Threaded Compositor] Move the viewport controller off the compositing thread
